--- a/src/styles/SelectCount.css
+++ b/src/styles/SelectCount.css
@@ -1,13 +1,35 @@
 .Navbar {
   width: 100%;
   height: 70px;
-  background-color: #f0f3f4;
+  background-color: #001200;
   justify-content: center;
   align-items: center;
   display: flex;
 
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  position: sticky;
 
-  z-index: 2;
+  position: absolute;
+  top: 0;
+  color: white;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+label {
+  margin-bottom: 10px;
+}
+
+select {
+  font-size: 1rem;
+  padding: 5px;
+  border-radius: 5px;
+  border: none;
+  background-color: #fff;
+  color: #333;
+  cursor: pointer;
+  outline: none;
 }
